# pymc-sandbox

./: .env.client.example  .env.server.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  recreate_experiments.sh
.cursor/rules/: fastapi.mdc  pyproject.mdc  python-cli.mdc
docs/: data-interface.md  poisson-cohort-rate-implementation-plan.md
src/pymc_vibes/: schemas.py
src/pymc_vibes/cli/: cli_types.py  client.py  data.py  db.py  events.py  experiments.py  generate.py  main.py  migrations.py
src/pymc_vibes/client/: README.md  cli.py  data.py  migrations.py
src/pymc_vibes/data/: bootstrap-events.json  sample_data.json
src/pymc_vibes/db/: __init__.py
src/pymc_vibes/pymc_models/: ab_test.py  bernoulli.py  hazard_rate.py  multi_armed_bandits.py  poisson.py  weibull.py
src/pymc_vibes/server/: README.md  database.py  db.py  main.py  mlflow.py  mlflow_cache.py  schemas.py
src/pymc_vibes/server/routers/: ab_test.py  bernoulli.py  events.py  experiments.py  hazard_rate.py  multi_armed_bandits.py  poisson_cohorts.py  ui.py  weibull.py
src/pymc_vibes/server/static/: ab_test.js  bernoulli.js  client.js  hazard_rate.js  index.js  multi_armed_bandits.js  poisson_cohorts.js  poisson_cohorts_original_impl.js  weibull.js
src/pymc_vibes/server/templates/: ab_test.html  base.html  bernoulli.html  detail_base.html  experiments_list.html  hazard_rate.html  index.html  multi_armed_bandits.html  poisson_cohorts.html  poisson_cohorts_original_impl.html  weibull.html
