[project]
dependencies = [
  "click>=8.2.1",
  "fastapi[standard]>=0.116.1",
  "ibis-framework[duckdb]>=10.8.0",
  "jinja2>=3.1.0",
  "pandas>=2.3.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "pymc>=5.25.1",
  "python-jose>=3.5.0",
  "structlog>=25.4.0",
]
description = "Add your description here"
name = "pymc-vibes"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
pv = "pymc_vibes.client.cli:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["tests"]
